pms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pms-app
  namespace: pms-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pms
  template:
    metadata:
      labels:
        app: pms
    spec:
      containers:
      - name: pms-container
        image: 401644592968.dkr.ecr.ap-south-1.amazonaws.com/pms/app
        ports:
        - containerPort: 3000
