pms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pms-service
  namespace: pms-namespace
spec:
  selector:
    app: pms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
