pms_frontend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pms-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:401644592968:certificate/3c534d47-9b60-4554-8181-1e2736a438d9"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-ExtdDuration-2021-06
spec:
  rules:
    - host: www.staysync.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
    - host: www.staysync.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pms-frontend-service
                port:
                  number: 80
